tests/baselines/reference/parser_continueTarget5.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          continue target;
          ~~~~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
      }
    }